package S191220053.Task_two;

public interface Animable{
    public void swap(int a, int b);
    public String getFrame();    
}
