package S191220053.Task_two;

public interface Sortable {
    public int[] toIntArray();
}
